--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,11 @@
-Flask==3.1.1
-Flask-CORS==6.0.1
-requests==2.32.4
-numpy==2.2.6
-torch==2.7.1+cpu --index-url https://download.pytorch.org/whl/cpu
-torchvision==0.22.1+cpu --index-url https://download.pytorch.org/whl/cpu
-opencv-python-headless==4.12.0.88
-Pillow==11.0.0
-gunicorn==23.0.0
-python-dotenv==1.0.0
-Werkzeug==3.1.3
+Flask>=3.0.0
+Flask-CORS>=6.0.0
+requests>=2.30.0
+numpy>=2.0.0
+torch>=2.0.0
+torchvision>=0.15.0
+opencv-python-headless>=4.8.0
+Pillow>=10.0.0
+gunicorn>=21.0.0
+python-dotenv>=1.0.0
+Werkzeug>=3.0.0
