Fix gunicorn start command for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tb-detection-platform
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
+    startCommand: cd backend && gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
       - key: FLASK_ENV
         value: production
