Memory optimization for Render deployment - lazy loading, reduced workers, CPU-only PyTorch

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
-Flask>=3.0.0
-Flask-CORS>=6.0.0
-requests>=2.30.0
-numpy>=2.0.0
-torch>=2.0.0
-torchvision>=0.15.0
-opencv-python-headless>=4.8.0
-Pillow>=10.0.0
-gunicorn>=21.0.0
-python-dotenv>=1.0.0
-Werkzeug>=3.0.0
+Flask==2.3.3
+Flask-CORS==4.0.0
+requests==2.31.0
+numpy==1.24.3
+torch==2.0.1
+torchvision==0.15.2
+opencv-python-headless==4.8.1.78
+Pillow==10.0.1
+gunicorn==21.2.0
+python-dotenv==1.0.0
+Werkzeug==2.3.7
+psutil==5.9.5
