--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,14 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-requests==2.31.0
-numpy==1.24.3
-torch==2.0.1
-torchvision==0.15.2
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
-gunicorn==21.2.0
-python-dotenv==1.0.0
-Werkzeug==2.3.7
-psutil==5.9.5
+setuptools>=68.0.0
+wheel>=0.40.0
+Flask>=2.3.0,<3.0.0
+Flask-CORS>=4.0.0,<5.0.0
+requests>=2.31.0,<3.0.0
+numpy>=1.24.0,<2.0.0
+torch>=2.0.0,<3.0.0
+torchvision>=0.15.0,<1.0.0
+opencv-python-headless>=4.8.0,<5.0.0
+Pillow>=10.0.0,<11.0.0
+gunicorn>=21.0.0,<22.0.0
+python-dotenv>=1.0.0,<2.0.0
+Werkzeug>=2.3.0,<3.0.0
+psutil>=5.9.0,<6.0.0
