--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 Flask>=3.0.0
 Flask-CORS>=6.0.0
 requests>=2.30.0
+tensorflow>=2.13.0
+opencv-python-headless>=4.8.0
+Pillow>=10.0.0
+numpy>=1.24.0
 gunicorn>=21.0.0
 python-dotenv>=1.0.0
 Werkzeug>=3.0.0
