--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-Flask>=3.0.0
-Flask-CORS>=6.0.0
-requests>=2.30.0
-tensorflow>=2.13.0
-opencv-python-headless>=4.8.0
-Pillow>=10.0.0
-numpy>=1.24.0
-gunicorn>=21.0.0
-python-dotenv>=1.0.0
-Werkzeug>=3.0.0
+Flask==3.0.0
+Flask-CORS==4.0.0
+requests==2.31.0
+tensorflow==2.13.0
+opencv-python-headless==4.8.1.78
+Pillow==10.0.1
+numpy==1.24.3
+gunicorn==21.2.0
+python-dotenv==1.0.0
+Werkzeug==3.0.1
+google-generativeai==0.3.2
+PyJWT==2.8.0
+bcrypt==4.1.2
