--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,16 @@ services:
   - type: web
     name: tb-detection-platform
     env: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT wsgi:app
+    plan: free
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: gunicorn wsgi:app
     envVars:
+      - key: PYTHON_VERSION
+        value: "3.11.5"
       - key: FLASK_ENV
         value: production
       - key: FLASK_DEBUG
         value: "False"
-      - key: PYTHON_VERSION
-        value: "3.11"
       - key: SECRET_KEY
         generateValue: true
       - key: CORS_ORIGINS
